# QT-DG_SET-HMI

./: CMakeLists.txt  README.md  diesel_generator_dashboard.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportdialog.cpp  reportdialog.h  res.qrc
models/: generator.stl
